testdata/baselines/reference/submodule/conformance/importTag12.errors.txt
/foo.js(2,4): error TS8006: 'import type' declarations can only be used in TypeScript files.


==== /foo.js (1 errors) ====
    /**
     * @import foo from
       ~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
     */
    